--- a/ubuntu/standard/Dockerfile.template
+++ b/ubuntu/standard/Dockerfile.template
@@ -130,6 +130,13 @@ RUN curl -sL https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.
  && rm miniconda.sh
 ENV CONDA=/usr/share/miniconda
 
+# Install Mono
+RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF \
+ && echo "deb https://download.mono-project.com/repo/ubuntu stable-$(UBUNTU_RELEASE) main" | tee /etc/apt/sources.list.d/mono-official-stable.list \
+ && apt-get update \
+ && apt-get install -y --no-install-recommends apt-transport-https mono-complete \
+ && rm -rf /var/lib/apt/lists/*
+
 # Install MySQL Client
 RUN apt-get update \
   && apt-get install mysql-client -y \
