--- a/ubuntu/standard/Dockerfile.template
+++ b/ubuntu/standard/Dockerfile.template
@@ -33,6 +33,9 @@ ENV LC_ALL $LANG
 RUN locale-gen $LANG \
  && update-locale
 
+# Accept EULA - needed for certain Microsoft packages like SQL Server Client Tools
+ENV ACCEPT_EULA=Y
+
 # Install essential build tools
 RUN apt-get update \
  && apt-get install -y --no-install-recommends \
