Fix phantomjs install

--- a/ubuntu/14.04/standard/Dockerfile
+++ b/ubuntu/14.04/standard/Dockerfile
@@ -245,8 +245,8 @@ ENV bower=/usr/local/bin/bower \
 # Install PhantomJS
 RUN apt-get update \
  && apt-get install -y chrpath libssl-dev libxft-dev libfreetype6 libfreetype6-dev libfontconfig1 libfontconfig1-dev \
- && rm -rf /var/lib/apt/lists/*
- && export PHANTOM_JS="phantomjs-2.1.1-linux-x86_64" \
+ && rm -rf /var/lib/apt/lists/* \
+ && export PHANTOM_JS=phantomjs-2.1.1-linux-x86_64 \
  && wget https://bitbucket.org/ariya/phantomjs/downloads/$PHANTOM_JS.tar.bz2 \
  && tar xvjf $PHANTOM_JS.tar.bz2 \
  && mv $PHANTOM_JS /usr/local/share \
