--- a/ubuntu/14.04/Dockerfile
+++ b/ubuntu/14.04/Dockerfile
@@ -1,5 +1,13 @@
 FROM ubuntu:14.04
 
+# Trusty needs an updated backport of apt to avoid hash sum mismatch errors
+RUN [ "$(UBUNTU_RELEASE)" = "trusty" ] \
+ && curl -s https://packagecloud.io/install/repositories/computology/apt-backport/script.deb.sh |  bash \
+ && apt-get update \
+ && apt-get install apt=1.2.10 \
+ && rm -rf /var/lib/apt/lists/* \
+ || echo -n
+
 RUN apt-get update \
  && apt-get install -y --no-install-recommends \
         software-properties-common \
