Install Ansible for Ubuntu standard/template

--- a/ubuntu/standard/Dockerfile.template
+++ b/ubuntu/standard/Dockerfile.template
@@ -42,6 +42,12 @@ RUN apt-get update \
     build-essential \
  && rm -rf /var/lib/apt/lists/*
 
+# Install Ansible
+RUN apt-get update \   
+ && apt-get install -y --no-install-recommends \
+    ansible \      
+ && rm -rf /var/lib/apt/lists/*
+
 # Install Azure CLI (instructions taken from https://docs.microsoft.com/en-us/cli/azure/install-azure-cli)
 RUN echo "deb [arch=amd64] https://packages.microsoft.com/repos/azure-cli/ $(lsb_release -cs) main" \
   | tee /etc/apt/sources.list.d/azure-cli.list \
