Move to Server 2019
- Use Server 2019 core
- Use the dotnet 4.7.2 image allows the installation
  of VS 2017 build tools
- try to fix the shutdown issue (not working jet)
- change to current agent version

--- a/windows/core/dockerfile.template
+++ b/windows/core/dockerfile.template
@@ -1,5 +1,5 @@
 # escape=`
-FROM microsoft/dotnet-framework:4.7.1
+FROM microsoft/dotnet-framework:4.7.2-runtime-windowsservercore-$(WINDOWS_VERSION)
 
 LABEL name="microsoft/vsts-agent:windows-core-$(WINDOWS_VERSION)" `
       version="0.0.1"
