--- a/windows/output/core/ltsc2019/agent/2.141.1/dockerfile
+++ b/windows/output/core/ltsc2019/agent/2.141.1/dockerfile
@@ -1,14 +1,16 @@
 # escape=`
-FROM microsoft/vsts-agent:windows-core-10.0.14393.2189
+FROM microsoft/vsts-agent:windows-core-ltsc2019
 
-LABEL name="microsoft/vsts-agent:windows-core-10.0.14393.2189-2.122.1" `
+LABEL name="microsoft/vsts-agent:windows-core-ltsc2019-2.141.1" `
       version="0.0.1"
+
+# Download Agent
+ADD https://vstsagentpackage.azureedge.net/agent/2.141.1/vsts-agent-win-x64-2.141.1.zip C:\TFS\agent.zip
 
 WORKDIR C:\TFS
 
 SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
-RUN Invoke-WebRequest "https://github.com/Microsoft/vsts-agent/releases/download/v2.122.1/vsts-agent-win7-x64-2.122.1.zip" -OutFile agent.zip; `
-    Expand-Archive agent.zip -DestinationPath .\Agent -Force; `
+RUN Expand-Archive agent.zip -DestinationPath .\Agent -Force; `
     Remove-Item -Force agent.zip
 
 SHELL ["cmd", "/S", "/C"]
@@ -21,5 +23,8 @@ RUN @powershell -ExecutionPolicy Bypass -Command "iex (Invoke-WebRequest 'https:
 RUN choco config set cachelocation C:\chococache
 
 COPY ./Run-Agent.ps1 .
+COPY ./Cleanup-Agent.ps1 .
 
-CMD ["powershell", "-Command", "C:/TFS/Run-Agent.ps1"]
+ENTRYPOINT ["powershell.exe", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
+CMD ["try {C:/TFS/Run-Agent.ps1;}finally {C:/TFS/Cleanup-Agent.ps1;}"]
+
